--- a/first-app/src/app/app.component.html
+++ b/first-app/src/app/app.component.html
@@ -318,6 +318,7 @@
 <div class="content" role="main">
 
   <!-- Highlight Card -->
+  <input type="button" value="Change Title" (click)="onBtnClick()"/>
   <div class="card highlight-card card-small">
 
     <svg id="rocket" alt="Rocket Ship" xmlns="http://www.w3.org/2000/svg" width="101.678" height="101.678" viewBox="0 0 101.678 101.678">
