--- a/first-app/src/app/calculator/calculator.component.html
+++ b/first-app/src/app/calculator/calculator.component.html
@@ -7,4 +7,6 @@
 <input type="button" value="Subtract" (click)="onSubtractClick()">
 <input type="button" value="Multiply" (click)="onMultiplyClick()">
 <input type="button" value="Divide" (click)="onDivideClick()">
-<div>{{result}}</div>
+<div [ngClass]="{positive : result >= 0, negative : result < 0}">
+    {{result}}
+</div>
