using ngSwitch, ngSwitchCase and ngSwitchDefault directives

--- a/first-app/src/app/app.component.html
+++ b/first-app/src/app/app.component.html
@@ -1,5 +1,17 @@
 <h1>My App</h1>
 <hr>
-<app-products></app-products>
-<app-greeter></app-greeter>
-<app-calculator></app-calculator>
+<input type="button" value="Products" (click)="choice='products' ">
+<input type="button" value="Greeter" (click)="choice='greeter'">
+<input type="button" value="Calculator" (click)="choice='calculator'">
+
+<!-- 
+    <app-products *ngIf="choice==='products'"></app-products>
+    <app-greeter *ngIf="choice==='greeter'"></app-greeter>
+    <app-calculator *ngIf="choice==='calculator'"></app-calculator> 
+-->
+<div [ngSwitch]="choice">
+    <app-products *ngSwitchCase="'products'"></app-products>
+    <app-greeter *ngSwitchCase="'greeter'"></app-greeter>
+    <app-calculator *ngSwitchCase="'calculator'"></app-calculator>
+    <div *ngSwitchDefault>Select an option!</div>
+</div>
