--- a/bug-tracker-app/src/app/bug-tracker/bug-tracker.component.html
+++ b/bug-tracker-app/src/app/bug-tracker/bug-tracker.component.html
@@ -1,7 +1,7 @@
 <section class="stats">
     <span class="closed">1</span>
     <span> / </span>
-    <span>2</span>
+    <span>{{bugs.length}}</span>
 </section>
 <section class="sort">
     <label for="">Order By :</label>
@@ -14,21 +14,21 @@
 </section>
 <section class="edit">
     <label for="">Bug Name :</label>
-    <input type="text" name="" id="">
-    <input type="button" value="Add New">
+    <input type="text" [(ngModel)]="newBug">
+    <input type="button" value="Add New" (click)="onAddNewClick()">
 </section>
 <section class="list">
     <ol>
-        <li>
-            <span class="bugname">[This is bug - 1]</span>
+        <li *ngFor="let bug of bugs">
+            <span class="bugname">{{bug}}</span>
             <div class="datetime">[createdAt]</div>
-            <input type="button" value="Remove">
+            <input type="button" value="Remove" (click)="onRemoveClick(bug)">
         </li>
-        <li>
+        <!-- <li>
             <span class="bugname closed">[This is bug - 2]</span>
             <div class="datetime">[createdAt]</div>
             <input type="button" value="Remove">
-        </li>
+        </li> -->
     </ol>
     <input type="button" value="Remove Closed">
 </section>
