--- a/bug-tracker-app/src/app/bug-tracker/bug-tracker.component.html
+++ b/bug-tracker-app/src/app/bug-tracker/bug-tracker.component.html
@@ -1,5 +1,5 @@
 <section class="stats">
-    <span class="closed">1</span>
+    <span class="closed">{{ getClosedCount() }}</span>
     <span> / </span>
     <span>{{bugs.length}}</span>
 </section>
@@ -20,7 +20,13 @@
 <section class="list">
     <ol>
         <li *ngFor="let bug of bugs">
-            <span class="bugname">{{bug | json}}</span>
+            <span 
+                class="bugname" 
+                (click)="onBugNameClick(bug)"
+                [ngClass]="{closed : bug.isClosed}"
+            >
+                {{bug | json}}
+            </span>
             <div class="datetime">[createdAt]</div>
             <input type="button" value="Remove" (click)="onRemoveClick(bug)">
         </li>
@@ -30,5 +36,5 @@
             <input type="button" value="Remove">
         </li> -->
     </ol>
-    <input type="button" value="Remove Closed">
+    <input type="button" value="Remove Closed" (click)="onRemoveClosedClick()">
 </section>
