--- a/bug-tracker-app/src/app/bug-tracker/bug-tracker.component.html
+++ b/bug-tracker-app/src/app/bug-tracker/bug-tracker.component.html
@@ -25,7 +25,7 @@
                 (click)="onBugNameClick(bug)"
                 [ngClass]="{closed : bug.isClosed}"
             >
-                {{bug | json}}
+                {{bug.name | trimText}}
             </span>
             <div class="datetime">[createdAt]</div>
             <input type="button" value="Remove" (click)="onRemoveClick(bug)">
