--- a/bug-tracker-app/src/app/bug-tracker/bug-tracker.component.html
+++ b/bug-tracker-app/src/app/bug-tracker/bug-tracker.component.html
@@ -5,9 +5,12 @@
 </section>
 <section class="sort">
     <label for="">Order By :</label>
-    <select name="" id="">
-        <option value=""></option>
-        <option value=""></option>
+    <select>
+        <option value="">---Select---</option>
+        <option value="id">Id</option>
+        <option value="name">Name</option>
+        <option value="isClosed">Status</option>
+        <option value="createdAt">Created</option>
     </select>
     <label for="">Descending ? :</label>
     <input type="checkbox" name="" id="">
@@ -27,7 +30,7 @@
             >
                 {{bug.name | trimText:40}}
             </span>
-            <div class="datetime">[createdAt]</div>
+            <div class="datetime">{{bug.createdAt | date}}</div>
             <input type="button" value="Remove" (click)="onRemoveClick(bug)">
         </li>
         <!-- <li>
