--- a/bug-tracker-app/src/app/bug-tracker/bug-tracker.component.html
+++ b/bug-tracker-app/src/app/bug-tracker/bug-tracker.component.html
@@ -5,7 +5,7 @@
 </section>
 <section class="sort">
     <label for="">Order By :</label>
-    <select>
+    <select [(ngModel)]="sortAttr">
         <option value="">---Select---</option>
         <option value="id">Id</option>
         <option value="name">Name</option>
@@ -22,7 +22,7 @@
 </section>
 <section class="list">
     <ol>
-        <li *ngFor="let bug of bugs">
+        <li *ngFor="let bug of ( bugs | sort:sortAttr ) ">
             <span 
                 class="bugname" 
                 (click)="onBugNameClick(bug)"
