--- a/bug-tracker-app/src/app/bug-tracker/bug-tracker.component.html
+++ b/bug-tracker-app/src/app/bug-tracker/bug-tracker.component.html
@@ -11,11 +11,7 @@
     <label for="">Descending ? :</label>
     <input type="checkbox" [(ngModel)]="sortDesc">
 </section>
-<section class="edit">
-    <label for="">Bug Name :</label>
-    <input type="text" [(ngModel)]="newBugName">
-    <input type="button" value="Add New" (click)="onAddNewClick()">
-</section>
+<app-bug-edit (created)="onNewBugCreated($event)"></app-bug-edit>
 <section class="list">
     <ol>
         <li *ngFor="let bug of ( bugs | sort:sortAttr:sortDesc ) ">
