--- a/bug-tracker-app/src/app/bug-tracker/bug-tracker.component.html
+++ b/bug-tracker-app/src/app/bug-tracker/bug-tracker.component.html
@@ -23,7 +23,7 @@
                 {{bug.name | trimText:40}}
             </span>
             <small> - [{{bug.id}}]</small>
-            <div class="datetime">{{bug.createdAt}}</div>
+            <div class="datetime">{{bug.createdAt | elapsed}}</div>
             <input type="button" value="Remove" (click)="onRemoveClick(bug)">
         </li>
     </ol>
