form validation for bug edit component

--- a/bug-tracker-app/src/app/bug-tracker/components/bug-edit/bug-edit.component.css
+++ b/bug-tracker-app/src/app/bug-tracker/components/bug-edit/bug-edit.component.css
@@ -1,3 +1,18 @@
 section{
     margin-bottom: 10px;
 }
+
+.errorMessage{
+    color : red;
+}
+
+.errorInput{
+    border-color : red;
+}
+
+.show{
+    display: block;
+}
+.hide{
+    display: none;
+}
